extends TabBar


@onready var left_page: RichTextLabel = $VSplitContainer/Pages/LeftPage
@onready var right_page: RichTextLabel = $VSplitContainer/Pages/RightPage
@onready var left_page_number: Label = $VSplitContainer/PageNumbers/LeftPageNumber
@onready var right_page_number: Label = $VSplitContainer/PageNumbers/RightPageNumber
